--- a/package.json
+++ b/package.json
@@ -33,9 +33,14 @@
   ],
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/js-yaml": "^4.0.3",
     "@types/node": "^16.10.2",
     "jest": "^27.2.4",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "json-schema-to-typescript": "^10.1.5"
   }
 }
